--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
   "author": "John Benavides <john.elric@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "7.25.2",
-    "@babel/preset-env": "7.25.3",
-    "@babel/preset-react": "7.24.7",
+    "@babel/core": "7.26.0",
+    "@babel/preset-env": "7.26.0",
+    "@babel/preset-react": "7.25.9",
     "babel-eslint": "10.1.0",
-    "eslint": "8.57.0",
+    "eslint": "^8",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "18.0.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-jsconfig": "^1.1.0",
+    "eslint-import-resolver-jsconfig": "1.1.0",
     "eslint-import-resolver-node": "0.3.9",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "6.9.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react": "7.37.2",
     "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-react-refresh": "0.4.9",
-    "prettier": "3.3.3",
+    "eslint-plugin-react-refresh": "0.4.14",
+    "prettier": "3.4.1",
     "prettier-eslint": "16.3.0"
   }
 }
